2.5 (Upcoming 2022)

o New operation -typeset typesets a text file as a PDF
o New operation -table-of-contents makes table of contents from bookmarks
o When adding text or graphics, may choose CYMK or Grey instead of RGB
o Append e.g DUP2 to a page range to make 1,2,3 --> 1,1,2,2,3,3 etc.
o The -list-fonts operation now obeys the range
o New operation -print-font-table gives (charcode, unicode, glyph name) triples
o Can now search for a font by real name with -font
o Text added in existing fonts is now encoding-aware (plus new raw mode)
o New -print-dict-entry operation prints values for a given key
o Extend -remove-dict-entry to allow search
o New -replace-dict-entry function to search & replace e.g URLs
o Output annotations in JSON form with -list-annotations-json
o Basic merging of AcroForms
o Output bookmarks in JSON format with -list-bookmarks-json
o Load bookmarks in JSON format with -add-bookmarks-json
o New operations -impose and -impose-xy for document imposition
o New option -collate to collate pages when merging
o Option -debug-force now properly documented as -decrypt-force
o Switch to Yojson for faster/better JSON input/output
o Can read as well as write PDFs in JSON format with -j
o Environment variable CPDF_REPRODUCIBLE_DATES for testing
o Environment variable CPDF_DEBUG for -debug
o Effectively make stderr unbuffered
o Prepend NOT to a page range to invert it
o Split functionality into separate modules, but retain cpdf.ml for interface

2.4 (June 2021)

o New operation -extract-images
o New operation -output-json et al. to export PDF files in JSON format
o New operations to manipulate Optional Content Groups
o New operation -stamp-as-xobject to add one PDF as an xobject in another
o Optional Content Groups now preserved when merging / stamping pages
o Listing, coalescing and modfiying Optional Content Groups.
o New -labels-progress option to improve page labels interface
o Appearance streams transformed when transforming annotations